[gd_scene load_steps=6 format=3 uid="uid://bpweq8mka0xch"]

[ext_resource type="Script" uid="uid://c2ch7v4q4s75l" path="res://scripts/objects/particle_accelerator.gd" id="1_opdks"]
[ext_resource type="Texture2D" uid="uid://dpmd6r8p6ss2d" path="res://assets/images/objects/particle-accelerator.png" id="1_orjfe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6iki"]
size = Vector2(100, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e0164"]
size = Vector2(100, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ym7me"]
size = Vector2(100, 150)

[node name="ParticleAccelerator" type="Node2D"]
script = ExtResource("1_opdks")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_orjfe")

[node name="Top" type="StaticBody2D" parent="."]
position = Vector2(0, -100)
collision_layer = 2
collision_mask = 25
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
shape = SubResource("RectangleShape2D_o6iki")

[node name="Bottom" type="StaticBody2D" parent="."]
position = Vector2(0, 100)
collision_layer = 2
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
shape = SubResource("RectangleShape2D_e0164")

[node name="EffectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectArea"]
shape = SubResource("RectangleShape2D_ym7me")

[node name="LeftMarker" type="Marker2D" parent="."]
position = Vector2(-50, 0)

[node name="RightMarker" type="Marker2D" parent="."]
position = Vector2(50, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="EffectArea" to="." method="_on_effect_area_body_entered"]
